fix: refactored charts to use Tailwind classes, and filter data to display lasdt 6months on mobile screens, full year on desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
   }
 
   main {
-    @apply mt-20;
+    @apply mt-30;
   }
 
   ::selection {
